<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Football Scores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league">UEFA Champions League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="premierleague">Premier League</string>
    <string name="primeradivison">Primera Division</string>
    <string name="seriaa">Serie A</string>
    <string name="matchday_text">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria
        A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission
        form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a
        modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to
        y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text">No scores are available now.</string>
    <string name="group_stages_format">
        Group Stages, Matchday :
        <xliff:g id="match_day">%1$s</xliff:g>
    </string>

    <string name="match_of_the_day_format">
        Matchday :
        <xliff:g id="match_day">%1$s</xliff:g>
    </string>

    <string name="scores_format">
        <xliff:g id="match_day">%1$s</xliff:g>
        -
        <xliff:g id="match_day">%2$s</xliff:g>
    </string>
    <string name="content_description_football_club_logo">The Footballs club logo</string>
    <string name="content_description_football_club_home">The football clubs home</string>
    <string name="content_description_score_board">score_board</string>
    <string name="content_description_match_data">Match data</string>
    <string name="content_description_club_playing_away">Club playing away</string>
    <string name="content_description_about_text">About the application</string>
    <string name="content_description_league">Leagues</string>
    <string name="content_description_match_day">Match day</string>
    <string name="add_widget">Add widget</string>
    <string name="football_scores">Football scores</string>

    <string name="api_key">ENTER IN A VALID API KEY HERE!!!</string>
</resources>
