<RelativeLayout
    android:id="@+id/widget_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_dark"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/widget_title_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/football_scores"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:text="@string/football_scores"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/score_board_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widget_title_container">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/score_widget_home_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_football_club_logo"
                tools:src="@drawable/leicester_city_fc_hd_logo"/>

            <TextView
                android:id="@+id/widget_home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_football_club_home"
                android:gravity="center"
                android:textSize="@dimen/team_name_text_size"
                tools:text="@string/leicester_city_fc"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_score"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_score_board"
                android:gravity="center"
                android:textSize="@dimen/score_text_size"
                tools:text="0 - 4"/>

            <TextView
                android:id="@+id/score_widget_match_time"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/matchday_text"
                android:gravity="center"
                tools:text="@string/test_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/score_widget_away_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_football_club_logo"
                tools:src="@drawable/manchester_united"/>

            <TextView
                android:id="@+id/widget_away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/content_description_football_club_home"
                android:gravity="center"
                android:textSize="@dimen/team_name_text_size"
                tools:text="@string/manchester_united_fc"/>
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/widget_score_empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:background="@color/green_dark"
        android:contentDescription="@string/widget_text"
        android:text="@string/widget_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/widget_text_size"
        android:textStyle="bold|italic"/>

</RelativeLayout>
