<RelativeLayout
    android:id="@+id/widget_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_dark"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/widget_title_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/football_scores"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            android:text="@string/football_scores"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:ignore="NewApi"/>
    </LinearLayout>

    <ListView
        android:id="@+id/widget_score_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/widget_title_container"/>

    <TextView
        android:id="@+id/widget_score_empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:background="@color/green_dark"
        android:contentDescription="@string/widget_text"
        android:text="@string/widget_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/widget_text_size"
        android:textStyle="bold|italic"
        android:visibility="gone"/>
</RelativeLayout>
